# Financial-Econometrics

./: LICENSE
HW_01/: ex01_谢颂凯.ipynb  simu_01.dta
HW_02/: Table01.docx  ex02_谢颂凯.ipynb
hw01/: LICENSE  Makefile  README.md  pyproject.toml
hw01/docs/: mkdocs.yml
hw01/docs/docs/: index.md
hw01/hw01/: __init__.py  dataset.py  features.py  plots.py
hw01/hw01/modeling/: predict.py  train.py
