[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hw01"
version = "0.0.1"
description = "\u91d1\u878d\u8ba1\u91cf\u7ecf\u6d4e\u5b66 \u7b2c\u4e00\u6b21\u4f5c\u4e1a"
authors = [
  { name = "\u8c22\u9882\u51ef" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["hw01"]
include = ["pyproject.toml", "hw01/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hw01"]
force-sort-within-sections = true

